--- a/開発技術.html
+++ b/開発技術.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/style.css">
-    <title>学校紹介</title>
+    <title>学校紹介ページ</title>
 </head>
 <body>
-    <h1>学校紹介</h1>
-    <script src="js/app.js"></script>
+    <h2>学校紹介ページ</h2>
+    <h2>班員一覧</h2>
+    <script src="jsp/app.js"></script>
 </body>
 </html>
